# allegro_toolkit

./: CMakeLists.txt  FindRBDL.cmake  README.md  package.xml
data_recording/: adaptive_stability_rot_0.csv  adaptive_stability_rot_1.csv  adaptive_tracking_pos0_2.csv  adaptive_tracking_pos0_3.csv  adaptive_tracking_pos0_4.csv  adaptive_tracking_pos0_5.csv  adaptive_tracking_pos0_8.csv  adaptive_tracking_pos1_0.csv  adaptive_tracking_pos1_3.csv  adaptive_tracking_pos1_4.csv  adaptive_tracking_pos1_5.csv  adaptive_tracking_pos1_6.csv  adaptive_tracking_pos1_8.csv  adaptive_tracking_pos3_0.csv  adaptive_tracking_pos3_1.csv  adaptive_tracking_pos3_6.csv  adaptive_tracking_pos3_8.csv  passiveDs_tracking_pos0_0.csv  passiveDs_tracking_pos0_2.csv  passiveDs_tracking_pos0_3.csv  passiveDs_tracking_pos0_5.csv  passiveDs_tracking_pos0_7.csv  passiveDs_tracking_pos0_9.csv  passiveDs_tracking_pos1_0.csv  passiveDs_tracking_pos1_2.csv  passiveDs_tracking_pos1_4.csv  passiveDs_tracking_pos1_6.csv  passiveDs_tracking_pos1_7.csv  passiveDs_tracking_pos1_8.csv  passiveDs_tracking_pos3_0.csv  passiveDs_tracking_pos3_1.csv  passiveDs_tracking_pos3_4.csv  passiveDs_tracking_pos3_6.csv  passiveDs_tracking_pos3_8.csv  passiveds_stability_rot_0.csv  passiveds_stability_rot_1.csv  passiveds_stability_rot_2.csv
data_recording/adaptive_rotation/: adaptive_stability_rot_2.csv
data_recording/adaptive_rotation/posnew/: adaptive_stability_rot_0.csv  adaptive_stability_rot_1.csv  adaptive_stability_rot_2.csv  adaptive_stability_rot_3.csv  adaptive_stability_rot_4.csv
data_recording/adaptive_tracking/pos0/: adaptive_tracking_pos0_0.csv  adaptive_tracking_pos0_1.csv  adaptive_tracking_pos0_6.csv  adaptive_tracking_pos0_7.csv  adaptive_tracking_pos0_9.csv
data_recording/adaptive_tracking/pos1/: adaptive_tracking_pos1_1.csv  adaptive_tracking_pos1_2.csv  adaptive_tracking_pos1_7.csv  adaptive_tracking_pos1_9.csv
data_recording/adaptive_tracking/pos2/: adaptive_tracking_pos3_2.csv  adaptive_tracking_pos3_4.csv  adaptive_tracking_pos3_5.csv  adaptive_tracking_pos3_7.csv  adaptive_tracking_pos3_9.csv
data_recording/adaptive_tracking/pos4/: adaptive_tracking_pos4_0.csv  adaptive_tracking_pos4_1.csv  adaptive_tracking_pos4_2.csv  adaptive_tracking_pos4_3.csv  adaptive_tracking_pos4_4.csv  adaptive_tracking_pos4_5.csv  adaptive_tracking_pos4_6.csv  adaptive_tracking_pos4_7.csv  adaptive_tracking_pos4_8.csv  adaptive_tracking_pos4_9.csv
data_recording/passiveds_tracking/pos0/: passiveDs_tracking_pos0_1.csv  passiveDs_tracking_pos0_4.csv  passiveDs_tracking_pos0_6.csv  passiveDs_tracking_pos0_8.csv
data_recording/passiveds_tracking/pos1/: passiveDs_tracking_pos1_1.csv  passiveDs_tracking_pos1_3.csv  passiveDs_tracking_pos1_5.csv  passiveDs_tracking_pos1_9.csv
data_recording/passiveds_tracking/pos2/: passiveDs_tracking_pos3_2.csv  passiveDs_tracking_pos3_3.csv  passiveDs_tracking_pos3_5.csv  passiveDs_tracking_pos3_7.csv  passiveDs_tracking_pos3_9.csv
include/: motion_capture.h
include/control/: abs_control.hpp  adaptive_control.h  control_util.h  ds_force_control.h  hand_ft_controller.hpp  power_grasp_adaptive.h  qp_based_control.h  qp_solver.hpp
include/robot/: abs_robot.hpp  hand_robot.hpp
launch/: adaptive_control.launch  biotac_test.launch  ds_force.launch  finger_pos_controller.launch  ft_controller.launch  power_grasp.launch  qp_control.launch  sim.launch  vrpn_optitrack.launch
models/urdf/: allegro_left.urdf  allegro_left_biotac.urdf
src/: adaptive_control_node.cpp  ds_force_node.cpp  hand_ft_controller_node.cpp  hand_torque_sim_node.cpp  motion_capture.cpp  node_finger_pos_controller.cpp  power_grasp_node.cpp  qp_control_node.cpp
src/control/: adaptive_control.cpp  control_util.cpp  ds_force_control.cpp  hand_ft_controller.cpp  power_grasp_adaptive.cpp  qp_based_control.cpp  qp_solver.cpp
src/robot/: hand_robot.cpp
